--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,18 @@
                       linear-gradient(to right, #4285F4, #DB4437, #F4B400, #0F9D58); /* Degradado de Google */
     background-clip: padding-box, border-box; /* Para que el degradado no se superponga al contenido */
   }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateX(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .animate-fadeIn {
+    animation: fadeIn 0.3s ease-out;
+  }
